--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 </video>
         </div>
         <div class="hero-content">
-            <h1 class="fade-in">VOLODYMIR GURENKO</h1>
+            <h1 class="fade-in">VOLODYMYR GURENKO</h1>
             <p class="fade-in">Professional Tennis Player</p>
         </div>
     </section>
