--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Professional tennis player portfolio showcasing achievements, rankings, and career highlights">
     <meta name="keywords" content="tennis, professional tennis, tennis player, tennis portfolio, tennis achievements">
+    <meta name="robots" content="index, follow">
     <link rel="icon" href="assets/tennis.png" type="image/png">
     <title>Volodymyr Gurenko | Professional Tennis Player</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
